Adding file about Files chapter

--- a/Data Structures.ipynb
+++ b/Data Structures.ipynb
@@ -275,6 +275,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He was an old man who fished alone in a skiff in the Gulf Stream and he\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys, os\n",
+    "sys.path.append('/Users/Quentin/Documents/Python/Think Python')\n",
+    "fin = open('oldmanandthesea.txt', encoding='utf-8', errors='ignore')\n",
+    "print(fin.readline())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 215,
    "metadata": {
     "collapsed": false
