Created sed function (file copy/ replacement)

--- a/Files.ipynb
+++ b/Files.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -129,25 +129,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "f = open('words_short2.txt')\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'words_short2.txt'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-9ca8d2a63feb>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-0c486736c708>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'words_short2.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'words_short2.txt'"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-9ca8d2a63feb>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    python3 wc.py\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "f = open('words_short2.txt')"
+    "#Run as a scrip\n",
+    "python3 wc.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "exec(open(\"wc.py\").read())  # Execute as a script - replaces python3 syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import wc #Doesn't do the function execution because __name__ = __main__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__main__\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(__name__)"
    ]
   },
   {
@@ -158,22 +217,26 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-18-c1d730cb7157>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-c1d730cb7157>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    python3 /Users/Quentin/Documents/Python/Think Python/wc.py\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\t2\r",
+      "4\n",
+      "5\n",
+      "'13\\t2\\r4\\n5'\n"
      ]
     }
    ],
    "source": [
-    "#Run as a scrip\n",
-    "python3 /Users/Quentin/Documents/Python/Think Python/wc.py"
+    "# the 'Repr(int)' fuction\n",
+    "s = '13\\t2\\r4\\n5'\n",
+    "print(s)\n",
+    "print(repr(s))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -182,116 +245,151 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'wc.py'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-01d7067af423>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mexec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Users/Quentin/Documents/Python/Think Python/wc.py\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<string>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m<string>\u001b[0m in \u001b[0;36mlinecount\u001b[0;34m(filename)\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'wc.py'"
+      "Help on built-in function repr in module builtins:\n",
+      "\n",
+      "repr(obj, /)\n",
+      "    Return the canonical string representation of the object.\n",
+      "    \n",
+      "    For many object types, including most builtins, eval(repr(obj)) == obj.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "exec(open(\"/Users/Quentin/Documents/Python/Think Python/wc.py\").read())"
+    "help(repr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Exercise 14.1. \n",
+    "Write a function called       that takes as arguments a pattern string, a replacement string, and two filenames; it should read the first file and write the contents into the second file (creating it if necessary). If the pattern string appears anywhere in the file, it should be replaced with the replacement string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def sed(pattern_string, replacement_string, filename_in, filename_out):\n",
+    "    try:\n",
+    "        fin = open(filename_in, 'r')\n",
+    "        fout = open(filename_out, 'w')\n",
+    "        lines = fin.readlines()\n",
+    "        for line in lines:\n",
+    "            line = line.replace(pattern_string, replacement_string)   #replace not *in place*\n",
+    "            fout.write(line)\n",
+    "            print(line)\n",
+    "        fin.close()\n",
+    "        fout.close()\n",
+    "    except:\n",
+    "        \"File manipulation error\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ftest=open('oldmanandthesea.txt', 'r')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He wys yn old myn who fished ylone in y skiff in the Gulf Streym ynd he\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ftest.readline().replace('a', 'y'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "He wys yn old myn who fished ylone in y skiff in the Gulf Streym ynd he\n",
+      "\n",
+      "hyd gone eighty-four dyys now without tyking y fish.  In the first\n",
+      "\n",
+      "forty dyys y boy hyd been with him.  But yfter forty dyys without y\n",
+      "\n",
+      "fish the boy's pyrents hyd told him thyt the old myn wys now definitely\n",
+      "\n",
+      "ynd finylly _sylyo_, which is the worst form of unlucky, ynd the boy\n",
+      "\n",
+      "hyd gone yt their orders in ynother boyt which cyught three good fish\n",
+      "\n",
+      "the first week.  It myde the boy syd to see the old myn come in eych\n",
+      "\n",
+      "dyy with his skiff empty ynd he ylwyys went down to help him cyrry\n",
+      "\n",
+      "either the coiled lines or the gyff ynd hyrpoon ynd the syil thyt wys\n",
+      "\n",
+      "furled yround the myst.  The syil wys pytched with flour sycks ynd,\n",
+      "\n",
+      "furled, it looked like the flyg of permynent defeyt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sed('a', 'y', 'oldmanandthesea_short.txt', 'output.txt')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method_descriptor:\n",
+      "\n",
+      "replace(...)\n",
+      "    S.replace(old, new[, count]) -> str\n",
+      "    \n",
+      "    Return a copy of S with all occurrences of substring\n",
+      "    old replaced by new.  If the optional argument count is\n",
+      "    given, only the first count occurrences are replaced.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(str.replace)"
+   ]
   },
   {
    "cell_type": "code",
