--- a/Files.ipynb
+++ b/Files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,35 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function open in module posix:\n",
-      "\n",
-      "open(path, flags, mode=511, *, dir_fd=None)\n",
-      "    Open a file for low level IO.  Returns a file descriptor (integer).\n",
-      "    \n",
-      "    If dir_fd is not None, it should be a file descriptor open to a directory,\n",
-      "      and path should be relative; path will then be relative to that directory.\n",
-      "    dir_fd may not be implemented on your platform.\n",
-      "      If it is unavailable, using it will raise a NotImplementedError.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(os.open)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -100,19 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/Quentin/Documents/NYCDataScienceAcademy/PDA_Summer/pda_week2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cwd = os.getcwd()\n",
     "print(cwd)"
@@ -129,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -141,20 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-9ca8d2a63feb>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-9ca8d2a63feb>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    python3 wc.py\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Run as a scrip\n",
     "python3 wc.py"
@@ -162,26 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "exec(open(\"wc.py\").read())  # Execute as a script - replaces python3 syntax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -192,41 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "__main__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13\t2\r",
-      "4\n",
-      "5\n",
-      "'13\\t2\\r4\\n5'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# the 'Repr(int)' fuction\n",
     "s = '13\\t2\\r4\\n5'\n",
@@ -236,25 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function repr in module builtins:\n",
-      "\n",
-      "repr(obj, /)\n",
-      "    Return the canonical string representation of the object.\n",
-      "    \n",
-      "    For many object types, including most builtins, eval(repr(obj)) == obj.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(repr)"
    ]
@@ -271,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -281,8 +206,7 @@
     "    try:\n",
     "        fin = open(filename_in, 'r')\n",
     "        fout = open(filename_out, 'w')\n",
-    "        lines = fin.readlines()\n",
-    "        for line in lines:\n",
+    "        for line in fin:\n",
     "            line = line.replace(pattern_string, replacement_string)   #replace not *in place*\n",
     "            fout.write(line)\n",
     "            print(line)\n",
@@ -294,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -305,68 +229,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "He wys yn old myn who fished ylone in y skiff in the Gulf Streym ynd he\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ftest.readline().replace('a', 'y'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "He wys yn old myn who fished ylone in y skiff in the Gulf Streym ynd he\n",
-      "\n",
-      "hyd gone eighty-four dyys now without tyking y fish.  In the first\n",
-      "\n",
-      "forty dyys y boy hyd been with him.  But yfter forty dyys without y\n",
-      "\n",
-      "fish the boy's pyrents hyd told him thyt the old myn wys now definitely\n",
-      "\n",
-      "ynd finylly _sylyo_, which is the worst form of unlucky, ynd the boy\n",
-      "\n",
-      "hyd gone yt their orders in ynother boyt which cyught three good fish\n",
-      "\n",
-      "the first week.  It myde the boy syd to see the old myn come in eych\n",
-      "\n",
-      "dyy with his skiff empty ynd he ylwyys went down to help him cyrry\n",
-      "\n",
-      "either the coiled lines or the gyff ynd hyrpoon ynd the syil thyt wys\n",
-      "\n",
-      "furled yround the myst.  The syil wys pytched with flour sycks ynd,\n",
-      "\n",
-      "furled, it looked like the flyg of permynent defeyt.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sed('a', 'y', 'oldmanandthesea_short.txt', 'output.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "help(str.replace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import anagram   #see better version of anagrams functions using shelf module (no need for pickle dumps/loads )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -375,39 +282,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on method_descriptor:\n",
-      "\n",
-      "replace(...)\n",
-      "    S.replace(old, new[, count]) -> str\n",
-      "    \n",
-      "    Return a copy of S with all occurrences of substring\n",
-      "    old replaced by new.  If the optional argument count is\n",
-      "    given, only the first count occurrences are replaced.\n",
-      "\n"
+      "b\"(lp0\\nS'aligners'\\np1\\naS'engrails'\\np2\\naS'nargiles'\\np3\\naS'realigns'\\np4\\naS'signaler'\\np5\\naS'slangier'\\np6\\na.\"\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['aligners', 'engrails', 'nargiles', 'realigns', 'signaler', 'slangier']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "help(str.replace)"
+    "anagram.read_anagrams('aligners')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
